--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
         <form class="d-flex">
           <input id="city" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit" id="submit">Search</button>
+          <button class="btn btn-outline-success " type="submit" id="submit">Search</button>
         </form>
       </div>
     </div>
@@ -54,8 +54,8 @@
     <main>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
+          <div class="card mb-4 rounded-3 shadow-sm border-primary">
+            <div class="card-header py-3 text-white bg-primary border-primary">
               <h4 class="my-0 fw-normal">Temperature</h4>
             </div>
             <div class="card-body">
@@ -72,8 +72,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3">
+          <div class="card mb-4 rounded-3 shadow-sm border-primary">
+            <div class="card-header py-3 text-white bg-primary border-primary">
               <h4 class="my-0 fw-normal">Humidity Info</h4>
             </div>
             <div class="card-body">
